syntax = "proto3";

package product;

option go_package = "/product";

message Product {
  string Name = 1;
  string Description = 2;
  int32 Stock = 3;
  int32 Price = 4;
  Credentials credentials = 5;
}

message Credentials {
  string Username = 1;
  string Password = 2;
}

message Rating {
  int32 Score = 1;
  string Comment = 2;
}

message ProductResponse {
  int32 code = 1;
  string result = 2;
}

message RatingResponse {
  repeated Rating result = 1;
}

service SaleService {
  rpc CreateProduct(Product) returns (ProductResponse);
  rpc UpdateProduct(Product) returns (ProductResponse);
  rpc DeleteProduct(Product) returns (ProductResponse);
  rpc BuyProduct(Product) returns (ProductResponse);
  rpc GetRating(Product) returns (RatingResponse);
}


